.kubernetes/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: mahi
  labels:
    app: mahi
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: mahi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mahi
  labels:
    app: mahi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mahi
      tier: backend
  template:
    metadata:
      labels:
        app: mahi
        tier: backend
    spec:
      serviceAccountName: serviceaccount-name
      containers:
        - name: mahi
          image: <IMAGE>
          volumeMounts:
          - mountPath: /data
            name: data
          ports:
          - containerPort: 8080
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: nfs-data
      imagePullSecrets:
      - name: mahi-repo
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mahi-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - mahi.oriio.io
    secretName: hello-kubernetes-tls
  rules:
  - host: "mahi.oriio.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mahi
            port:
              number: 80
