.kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mahi-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: "mahi.oriio.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mahi
            port:
              number: 80
